style: fixed style of light border buttons as they were too dark when hovering over them

--- a/src/main/sass/foundation/style.sass
+++ b/src/main/sass/foundation/style.sass
@@ -289,10 +289,3 @@ html
 
 #navbar_logotype
     content: url('../../public/images/logotype.png')
-
-/*/ Bootstrap /*/
-.btn-outline-light
-    background: none !important
-
-    &:hover
-        opacity: 0.6
